Removed "overflow-x: hidden" from html and body since it prevents vertical scroll.

--- a/assets/rtpanel/scss/_header.scss
+++ b/assets/rtpanel/scss/_header.scss
@@ -1,5 +1,9 @@
 // ***** Header ***** //
 /* Header */
+.rtp-header-wrapper {
+    overflow-x: hidden; // This is used for Full Browser Width Navigation Bar
+}
+
 .rtp-header { }
 
 .rtp-logo-container { margin-bottom: rem-calc(30); }
