--- a/assets/rtpanel/scss/_utility.scss
+++ b/assets/rtpanel/scss/_utility.scss
@@ -1,6 +1,8 @@
-html, body {
-    overflow-x: hidden;
-}
+// ***** This is removed since it prevents vertical scroll. ***** //
+// ***** Previously this was used for Full Browser Width Navigation Bar ***** //
+// html, body {
+//     overflow-x: hidden;
+// }
 
 // Alignleft
 .alignleft {
